fixed text-align in content

--- a/assignments/module2-solution/CSS/datswagger.css
+++ b/assignments/module2-solution/CSS/datswagger.css
@@ -13,6 +13,7 @@ header{
 }
 h1, h2, h3{
   border: 1px solid black;
+  text-align: center;
 }
 section{
   color: white;
@@ -22,7 +23,7 @@ section{
   border: 1px solid black;
   padding: 10px;
   padding-top: 40px;
-  text-align: center;
+  text-align: left;
   font-family: Arial;
 }
 
